--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     
-    <div id="calculadora">
+    <div id="calculator">
         <div id="display">
-            <input type="text" id="displayInput">
+            <input type="text" id="displayInput" disabled >
         </div>
 
-        <div id="teclado">
+        <div id="keyboard">
             <button class="num">7</button>
             <button class="num">8</button>
             <button class="num">9</button>
@@ -23,17 +23,17 @@
             <button class="num">4</button>
             <button class="num">5</button>
             <button class="num">6</button>
-            <button class="operator">X</button>
+            <button class="operator">*</button>
 
             <button class="num">1</button>
             <button class="num">2</button>
             <button class="num">3</button>
             <button class="operator">-</button>
 
-            <button class="num"></button>
-            <button class="num"></button>
-            <button class="num"></button>
-            <button class="operator"></button>
+            <button class="num">0</button>
+            <button class="point">.</button>
+            <button class="equal">=</button>
+            <button class="operator">+</button>
         </div>
 
 
